<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.stpl.gtn.gtn2o.ws</groupId>
	<artifactId>GtnReportingWebservice</artifactId>
	<packaging>war</packaging>
	<name>GtnReportingWebservice</name>
	<parent>
		<groupId>com.stpl.gtn.gtn2o.ws.report.engine</groupId>
		<artifactId>GtnWsParentReportEngine</artifactId>
		<version>1.0</version>
	</parent>
	<properties>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.test.skip>false</maven.test.skip>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver</artifactId>
			<version>3.6.3</version>
			<!-- <scope>provided</scope> -->
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.test.version}</version>
			<scope>test</scope>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>6.4.0.jre7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging</artifactId>
			<version>3.3.0.Final</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.gtn.gtn2o.ws.report.engine</groupId>
			<artifactId>GtnWsReportEngineMongo</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.stpl.gtn.gtn2o.ws.report.engine</groupId>
			<artifactId>GtnWsReportEngine</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.stpl.gtn.gtn2o</groupId>
			<artifactId>GtnWsSecurity</artifactId>
			<version>${gtnsecurity.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>${jsonwebtoken.version}</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>GtnReportingWebservice</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<phase>install</phase>
						<configuration>
							<tasks>
								<property name="antProperty"
									value="${project.build.directory}/${project.build.finalName}.${project.packaging}" />
								<copy file="${antProperty}" todir="D:\Aadhithya\webserive\bpigtn_ws\wildfly-10.0.0\standalone\deployments" />
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
